@@ -4,6 +4,7 @@ package org.deltava.dao;
 import java.sql.*;
 import java.time.*;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import org.deltava.beans.*;
 import org.deltava.beans.flight.*;
@@ -207,7 +208,7 @@ public class GetTour extends DAO {
 			ps.setBoolean(1, true);
 			ps.setString(2, rp.getAirportD().getIATA());
 			ps.setString(3, rp.getAirportA().getIATA());
-			List<Tour> results = execute(ps).stream().filter(t -> t.isActiveOn(dt)).toList();
+			List<Tour> results = execute(ps).stream().filter(t -> t.isActiveOn(dt)).collect(Collectors.toList());
 			for (Tour t : results) {
 				t.setOwner(SystemData.getApp(dbName));
 				loadLegs(t);
